@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+17-Apr-2005
+~~~~~~~~~~~
+Bugfix: Replacing an existing display settings would erase all the other
+        existing settings (Stephen Watson, reported by Henrik Jacobsson).
+
 16-Apr-2005
 ~~~~~~~~~~~
 Bugfix: Expired thumbnails were not being purged from the memory cache
